新增[JavaExtDirsCp] 运行模式